--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Teamwork is an internal social network for organizations employees.",
   "main": "server/server.js",
   "scripts": {
-    "start": "babel-watch server/server.js"
+    "start": "babel-watch server/server.js",
+    "test": "nyc mocha server/tests/* --require @babel/register --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -19,13 +21,23 @@
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
     "babel-watch": "^7.0.0",
+    "braces": "^3.0.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.0.6",
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.4",
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
