--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "start": "babel-watch server/server.js",
-    "test": "nyc mocha server/tests/* --require @babel/register --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "test": "mocha --require @babel/register server/tests/* --exit",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
