--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "babel-watch server/server.js",
-    "test": "mocha --require @babel/register server/tests/* --exit",
+    "test": "mocha --require @babel/register server/tests/ --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
