--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^3.0.6",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0"
   }
 }
