--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "babel-watch server/server.js",
-    "test": "nyc mocha --require @babel/register server/tests/ --exit",
+    "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
