--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "@babel/cli": "^7.6.2",
     "@hapi/joi": "^16.1.4",
-    "babel": "^6.23.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
