--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "swagger-ui-express": "^4.1.1",
     "uuid": "^3.3.3"
   }
 }
