--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "babel-watch server/server.js",
     "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
-    "build": "babel server -d dist"
+    "build": "babel server -d dist",
+    "create:tables": "babel-node server/database/createTables"
   },
   "repository": {
     "type": "git",
@@ -44,8 +45,6 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "swagger-ui-express": "^4.1.1",
-    "uuid": "^3.3.3"
+    "pg": "^7.12.1"
   }
 }
