ch(travis): configure travis
- configure travis to use postgresql service

[Finishes #168976618]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
 node_js:
   - stable
-script:
+install:
   - npm install
-  - npm test
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database teamwork;' -U postgres
+notifications:
+  email: false
+script:
+  - "npm run test"
+sudo: false
