ch(travis): configure travis
- install missing dependency "babel-node"

[Finishes #168976618]

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "7.6.2",
     "@babel/preset-env": "7.6.2",
     "@babel/register": "7.6.2",
+    "babel-node": "0.0.1-security",
     "babel-polyfill": "6.26.0",
     "babel-watch": "7.0.0",
     "braces": "3.0.2",
