--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "nyc mocha --require babel-polyfill --require @babel/register server/tests/test.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist",
-    "create:tables": "babel-node server/models/db/createTables"
+    "create:tables": "babel-node server/models/db/createTables",
+    "migrate": "node dist/models/db/createTables"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
+    "@babel/node": "7.6.2",
     "@babel/preset-env": "7.6.2",
     "@babel/register": "7.6.2",
     "babel-polyfill": "6.26.0",
@@ -43,7 +45,6 @@
   },
   "dependencies": {
     "@babel/cli": "7.6.2",
-    "@babel/node": "7.6.2",
     "@hapi/joi": "16.1.4",
     "bcrypt": "3.0.6",
     "dotenv": "8.1.0",
