--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --exec babel-node server/server.js",
     "pretest": "babel-node server/models/db/createTables",
-    "test": "nyc mocha --require babel-polyfill --require @babel/register server/tests/test.spec.js --exit",
+    "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist",
     "create:tables": "babel-node server/models/db/createTables",
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@babel/cli": "7.6.2",
+    "@babel/polyfill": "^7.6.0",
     "@hapi/joi": "16.1.4",
     "bcrypt": "3.0.6",
     "dotenv": "8.1.0",
