bg(db): fix broken tests
- fixed broken tests due to a change in package.json script

[Finishes #169053326]

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist",
-    "create": "babel-node server/models/db/createTables && babel-node server/models/db/createTables",
+    "create:tables": "babel-node server/models/db/createTables && babel-node server/models/db/createTables",
     "migrate": "node dist/models/db/createTables"
   },
   "repository": {
