ch(tests): write tests for all endpoints
- added validations to all inputs
- removed challenge two folders

[Continues #169059406]

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist",
-    "create:tables": "babel-node server/models/db/createTables && babel-node server/models/db/createTables",
-    "migrate": "node dist/models/db/createTables"
+    "create:tables": "babel-node server/models/db/createTables createTables",
+    "migrate": "node dist/models/db/createTables createTables"
   },
   "repository": {
     "type": "git",
