--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Teamwork is an internal social network for organizations employees.",
   "main": "server/server.js",
   "scripts": {
-    "prestart": "create:tables",
+    "prestart": "npm run create:tables",
     "start": "nodemon --exec babel-node server/server.js",
     "dev-start": "nodemon --exec babel-node server/server.js",
     "pretest": "npm run create:tables",
-    "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
+    "test": "nyc mocha --require @babel/register server/tests/*.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist",
     "create:tables": "babel-node server/models/db/createTables createTables",
