bg(tests): fix travis failing tests
[Finishes #169059406]

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon --exec babel-node server/server.js",
     "dev-start": "nodemon --exec babel-node server/server.js",
     "pretest": "npm run create:tables",
-    "test": "nyc mocha --require @babel/register server/tests/*.spec.js --timeout 10000 --exit",
+    "test": "nyc mocha --require @babel/register server/tests/*.spec.js --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
     "build": "babel server -d dist",
     "create:tables": "babel-node server/models/db/createTables createTables",
