--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Teamwork is an internal social network for organizations employees.",
   "main": "server/server.js",
   "scripts": {
-    "start": "babel-watch server/server.js",
-    "test": "nyc mocha --require @babel/register server/tests/test.spec.js --exit",
+    "prestart": "npm run create:tables",
+    "start": "nodemon --exec babel-node server/server.js",
+    "dev-start": "nodemon --exec babel-node server/server.js",
+    "pretest": "npm run create:tables",
+    "test": "nyc mocha --require @babel/register server/tests/*.spec.js --timeout 10000 --exit",
     "posttest": "nyc report --reporter=text-lcov | coveralls",
-    "build": "babel server -d dist"
+    "build": "babel server -d dist",
+    "create:tables": "babel-node server/models/db/createTables createTables",
+    "migrate": "node dist/models/db/createTables createTables"
   },
   "repository": {
     "type": "git",
@@ -23,27 +28,29 @@
     "node": "12.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/register": "^7.6.2",
-    "babel-watch": "^7.0.0",
-    "braces": "^3.0.2",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "coveralls": "^3.0.6",
-    "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1"
+    "@babel/register": "7.6.2",
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
+    "coveralls": "3.0.6",
+    "eslint": "6.4.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "mocha": "6.2.0",
+    "nodemon": "1.19.3",
+    "nyc": "14.1.1"
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.4",
-    "bcrypt": "^3.0.6",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "uuid": "^3.3.3"
+    "@babel/core": "7.6.2",
+    "@babel/node": "7.6.2",
+    "@babel/preset-env": "7.6.2",
+    "@babel/cli": "7.6.2",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/runtime": "7.6.2",
+    "@hapi/joi": "16.1.4",
+    "bcrypt": "3.0.6",
+    "dotenv": "8.1.0",
+    "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "pg": "7.12.1"
   }
 }
